<resources>
	<string name="app_name_demo">Talka</string>
	<string name="welcom">مرحباً بكم في *</string>
	<string name="email_input">الرجاء إدخال صندوق البريد الإلكتروني</string>
	<string name="code_input">الرجاء إدخال رمز التحقق</string>
	<string name="login">تسجيل الدخول</string>
	<string name="email_tip">الرجاء إدخال صندوق البريد الصحيح</string>
	<string name="code_tip">الرجاء إدخال رمز التحقق الصحيح</string>
	<string name="send_sus">تم الإرسال بنجاح</string>
	<string name="upload_img">انقر هنا لتحميل صورة الملف الشخصي والحصول على المزيد من المتابعين</string>
	<string name="nickname">كنية</string>
	<string name="birdthday">عيد ميلاد</string>
	<string name="gender">الجنس</string>
	<string name="invite_code">رمز الدعوة (اختياري)</string>
	<string name="enter_app">يدخل</string>
	<string name="login_sus">تم تسجيل الدخول بنجاح</string>
	<string name="daily_misson">المهام اليومية</string>
	<string name="video_match">مباراة فيديو سريعة</string>
	<string name="charm_match">مباراة سحرية</string>
	<string name="search">أبحث</string>
	<string name="video_chat">دردشة الفيديو</string>
	<string name="sign_in_continue">علامة مستمرة</string>
	<string name="day">يوم</string>
	<string name="sign_in_now">تسجيل الدخول الآن</string>
	<string name="sign_more">احصل على مزيد من مكافات</string>
	<string name="sign_in">تسجيل الحضور</string>
	<string name="vip">VIP</string>
	<string name="level">مستوى</string>
	<string name="same_city">المدينة</string>
	<string name="nearby">قريب</string>
	<string name="private_chat">الدردشة الخاصة </string>
	<string name="say_hi">قل هاي</string>
	<string name="first_pay_gift">حزمة الهدية لأول شحن</string>
	<string name="single">أعزب</string>
	<string name="in_love">في علاقة الحب</string>
	<string name="divorce">مطلقة</string>
	<string name="emotional_status">حالة العاطف</string>
	<string name="choose_career">اختر المهنة</string>
	<string name="fate">إنه القدر</string>
	<string name="community">مجتمع</string>
	<string name="parties">حفلة</string>
	<string name="message">الرسائل</string>
	<string name="search_msg">ابحث عن الرسالة او مستخدام</string>
	<string name="search_all">ابحث عن  اللقب او الايدي او اسم الغرفة</string>
	<string name="mine">انا </string>
	<string name="friend">أصدقاء</string>
	<string name="office_msg">الرسائل الرسمية</string>
	<string name="just">قبل قليل</string>
	<string name="certificate_state">حالة الشهادة</string>
	<string name="local_city">مدينتك</string>
	<string name="base_info">المعلومات الأساسية</string>
	<string name="self_img">صورة جميلة</string>
	<string name="release_time">وقت النشر</string>
	<string name="message_tip">لقد حدد الطرف الآخر رسومًا للرسائل قدرها * ماسة / رسالة (يمكنك إرسال * رسائل مجانًا كل يوم)</string>
	<string name="chat_with">قل شيئا...</string>
	<string name="tips">جائزة</string>
	<string name="coin_num">ميزان الماس</string>
	<string name="coin">الماس</string>
	<string name="remark">ملاحظة</string>
	<string name="limit_num">محدودة بـ 40 حرفًا</string>
	<string name="remain">المتبقي</string>
	<string name="recharge">إعادة الشحن</string>
	<string name="sure_send">يرسل</string>
	<string name="invite_you">هل تقبل الدعوة المرسل اليك</string>
	<string name="cancel">يلغي</string>
	<string name="toast_cancel_black">تم الغاء الحظر بناجح</string>
	<string name="toast_black"> تم حظر بناجح</string>
	<string name="toast_copy">نسخ بناجح</string>
	<string name="toast_feedback">يرجى اكتب مراجعتك او اقتراحاتك</string>
	<string name="toast_input">يرجى ادخل محتوى البحث</string>
	<string name="toast_focus_self">لا يمكنك ان متابعة بنفسك</string>
	<string name="toast_no_cash"> لا يوجد ذاكرة مؤقتة للمسح</string>
	<string name="toast_clear_cash">تم التنظيف بنجاح</string>
	<string name="toast_commend">تعليق ناجح</string>
	<string name="toast_error_upload">لا يمكن تحميل الصور ومقاطع الفيديو والتسجيلات الصوتية في نفس الوقت</string>
	<string name="toast_report_sus">تم ابلاغ بناجح</string>
	<string name="toast_account_none">لا يمكن ان حساب فارغا</string>
	<string name="toast_account_error">ادخل  الحساب غير صحيح</string>
	<string name="toast_code_error">لا يمكن ان رمز التحقق فارغ</string>
	<string name="toast_bank_num">الرجاء ادخال رقم حساب البنك</string>
	<string name="toast_bank_name">الرجاء ادخال اسم البنك</string>
	<string name="toast_set_sus">تم تعيين بناجح</string>
	<string name="toast_get_money">تم تقديم طلب السحب</string>
	<string name="toast_input_name">الرجاء ادخل الاسم</string>
	<string name="toast_id_card">الرجاء ادخال رقم الهوية الشخصية</string>
	<string name="toast_qr_img">الرجاء اختيار صورة رمز الاستجابة السريعة</string>
	<string name="toast_all_gift">اختيار هدية المايك الكامل</string>
	<string name="toast_close_mic">لقد تم إيقاف تشغيل الميكروفون الخاص بك من قبل الإدارة</string>
	<string name="toast_music_error">لا يمكن تشغيل الموسيقي</string>
	<string name="toast_focus">نجاح</string>
	<string name="toast_focus_cancel">تم الغاء متابعة بناجح</string>
	<string name="toast_kicked">تم طرد المستخدام من الغرفة</string>
	<string name="toast_play_inline">يتم تشغيل التشغيل التسلسي حاليا</string>
	<string name="toast_play_radom">يتم تشغيل التشغيل العشوائي حاليا</string>
	<string name="toast_first_already">الأول حاليا</string>
	<string name="toast_add_music">يرجى إضافة الموسيقي من مكتبة الموسيقي</string>
	<string name="toast_invalid_music">موسيقي غير مفيد</string>
	<string name="toast_last_already">الأخير</string>
	<string name="toast_operation_fail">فشلت عملية التشغيل الموسيقي</string>
	<string name="toast_you_kick_out">تم طردك من الغرفة!</string>
	<string name="toast_banned_speak">تم حظرك عن كلام لمدة 3دقائق!</string>
	<string name="toast_collect_sus">تم المفضلة بناجح</string>
	<string name="toast_collect_cancel">إلغاء الاشتراك</string>
	<string name="toast_upload_tip">الرجاء تحميل موسيقي في الموقع الرسمي</string>
	<string name="toast_upload_error">الرجاء اختر موسيقي جديد ,تم تحميل هذا الموسيقي</string>
	<string name="toast_room_name_error">لا يمكن ان اسم الغرفة فارغا</string>
	<string name="toast_room_code_error">يجب ان تكون كلمة المرور الغرفة من 4 أرقام</string>
	<string name="toast_order_sus">تم قبول الطلب بنجاح</string>
	<string name="open_now">تفعيل الخدمة</string>
	<string name="focus">يتبع</string>
	<string name="fans">متابعون</string>
	<string name="visitor">زوار</string>
	<string name="guard">يحمي</string>
	<string name="shop">محل</string>
	<string name="packet">شنطة</string>
	<string name="video_certification">التحقق من الفيديو</string>
	<string name="mission_center">مركز المهام</string>
	<string name="my_room">غرفتي</string>
	<string name="my_guild">الوكالة</string>
	<string name="guild_enter">أنشاء وكالة</string>
	<string name="online_server">خدمة العملاء</string>
	<string name="setting">الإعدادات</string>
	<string name="envelope_wait">انتطار في الحصول على حزمة الهدية</string>
	<string name="self_intro_default">تعال والدردشة في أي وقت، في انتظار وصولك</string>
	<string name="achievement">إنجازات</string>
	<string name="dynamic">منشورات</string>
	<string name="gift_image">كتالوج الهدايا</string>
	<string name="medal_wall">جدارالميداليات</string>
	<string name="medel_empty">هنا فارغ جدا، اذهب إلى جمع الميداليات بسرعة~</string>
	<string name="edit_info">يحرر</string>
	<string name="edit_sus">إكمال التحقق التعرف على الوجه</string>
	<string name="approve">اذهب للتحقق</string>
	<string name="photo">صورة  جميلة </string>
	<string name="upload_four_imgs">قم بتحميل أربع صور جميلة</string>
	<string name="constellation">كوكبة</string>
	<string name="friendship_wish">رغبة في التعرف على أصدقاء</string>
	<string name="edit_name">تغيير اسمي</string>
	<string name="finish_base_info">اكمال المعلومات الأساسية</string>
	<string name="true_info">التحقق من الهوية الحقيقية</string>
	<string name="info_tips">لحماية حسابك، يجب التحقق من الهوية للشخصية</string>
	<string name="name">الاسم</string>
	<string name="id_card">رقم بطاقة الهوية</string>
	<string name="input_real_name">يرجى إدخال اسمك الحقيقي</string>
	<string name="input_id_num">يرجى إدخال رقم بطاقة الهوية</string>
	<string name="start_real">تفعيل التحقق التعرف على الوجه</string>
	<string name="male">ذكر</string>
	<string name="female">أنثى</string>
	<string name="choose_birthday">تاريخ الميلاد</string>
	<string name="sure">تأكيد</string>
	<string name="choose_city">اختر المدينة</string>
	<string name="record_sound">تسجيل تسجيل صوت</string>
	<string name="submit">يُقدِّم</string>
	<string name="touch_record">انقر للتسجيل صوت</string>
	<string name="time_duration">لا يمكن أن يكون الوقت أقل من 3 ثوان</string>
	<string name="delete_record">حذف صوت</string>
	<string name="record_sus">تم اكمال سجل الصوتي</string>
	<string name="toast_copy_sus">تم نسخه إلى الحافظة</string>
	<string name="focus_alreay">تمت المتابعة</string>
	<string name="msg_img">[صورة]</string>
	<string name="msg_sound">[رسالة صوتية]</string>
	<string name="msg_red_bag">[نقل الماس]</string>
	<string name="msg_gift">[هدية]</string>
	<string name="msg_video">[رسالة فيديو]</string>
	<string name="msg_prompt">[الملاحظة]</string>
	<string name="msg_hi">[الطرف الاخر قل هاي]</string>
	<string name="msg_dynamic">[منشورات]</string>
	<string name="toast_msg_kiss_array">الرسائل مرتبة حسب الألفة</string>
	<string name="toast_msg_time_array">تم ترتيب الرسائل حسب الوقت</string>
	<string name="close">حميم</string>
	<string name="no_data">لا توجد بيانات</string>
	<string name="receive_continue">قم بتسجيل الدخول بشكل متكرر للحصول على المزيد من وقت الفيديو المجاني</string>
	<string name="free_card_0">بطاقة فيديو لمدة دقيقة واحدة</string>
	<string name="free_card_1">بطاقة فيديو لمدة دقيقتين</string>
	<string name="free_card_2">بطاقة فيديو لمدة 3 دقائق</string>
	<string name="comple_mission">اذهب</string>
	<string name="misson_new">مهمة المبتدئ</string>
	<string name="today_fate">الصدفة اليوم</string>
	<string name="female_rank">جمال</string>
	<string name="heroic_rank">ثري</string>
	<string name="day_rank">يوميًا</string>
	<string name="week_rank">أسبوعي</string>
	<string name="month_rank">شهريا</string>
	<string name="empty_wait">شاغر</string>
	<string name="guard_who">الشخص المحمي</string>
	<string name="guard_exclusive_cp">حماية أفضل شريك حصري</string>
	<string name="guard_exclusive_seat">حماية مكان حصري على الميكروفون</string>
	<string name="guard_no">لا يوجد حماية حتى الآن</string>
	<string name="icon_frame">أفاتار</string>
	<string name="seat_flash">فتحة</string>
	<string name="bubble_frame">فقاعة</string>
	<string name="enter_effect">دخول</string>
	<string name="vehicle">يركب</string>
	<string name="preview">معاينة الأثر</string>
	<string name="gift">هدية</string>
	<string name="card">قسيمة</string>
	<string name="decorate">زخرفة</string>
	<string name="my_account">حسابي</string>
	<string name="wallet">محفظة</string>
	<string name="first_pay_off">عروض لأول شحن</string>
	<string name="my_coin">الماس الخاص بي</string>
	<string name="pay_channel">طريق الدفع</string>
	<string name="pay_confirm">تأكيد إعادة التعيين</string>
	<string name="pay_protocol">بروتوكولات إعادة الشحن</string>
	<string name="protocol_agree">القراءة وموافق</string>
	<string name="vip_level">VIP</string>
	<string name="contribute_level">مستوى المساهمة</string>
	<string name="contribute_level_right">امتيازات مستوي المساهمة</string>
	<string name="charm_level">مستوى الكاريزما</string>
	<string name="charm_level_right">امتيازات مستوى السحر</string>
	<string name="current_level">المستوى الحالي</string>
	<string name="next_level">* القيمة مطلوبة للوصول إلى المستوى التالي</string>
	<string name="vip_right">VIP</string>
	<string name="vip_unlock">تم تشغيل</string>
	<string name="up_strategy">الملاحظة الترقية</string>
	<string name="up_strategy_content">بعد أن تصل قيمة V إلى المستوى القياسي، يمكنك إعادة الشحن لزيادة مستوى VIP الخاص بك.</string>
	<string name="level_detail">وصف المستوى</string>
	<string name="personal_infomation"> معلومات شخصية</string>
	<string name="login_read_context">لقد قرأت ووافقت</string>
	<string name="login_read_context_user_protocol">《اتفاقية المستخدم》</string>
	<string name="login_read_context_secret_protocol">《سياسة الخصوصية》</string>
</resources>