<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".talka.login.RegisterActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/dp_110"
        android:layout_height="@dimen/dp_110"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/register_head_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/upload_img"
        android:textColor="#FF999999" />

    <EditText
        android:id="@+id/edit_nick_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_25"
        android:background="@drawable/shape_gray_text"
        android:hint="@string/nickname"
        android:maxLength="20"
        android:paddingStart="@dimen/dp_20"
        android:textColor="@color/font_333333"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/rl_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_25">

        <TextView
            android:id="@+id/birthday_value"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/shape_gray_text"
            android:gravity="center_vertical"
            android:hint="@string/birdthday"
            android:layoutDirection="ltr"
            android:paddingStart="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:textColor="@color/font_333333"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/rili" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sex_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_25">

        <TextView
            android:id="@+id/edt_sex"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/shape_gray_text"
            android:gravity="center_vertical"
            android:hint="@string/gender"
            android:maxLength="11"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/font_333333"
            android:textSize="14sp" />


        <RadioGroup
            android:id="@+id/mSexRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btnMale"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:button="@null"
                android:checked="false"
                android:drawableRight="@drawable/selector_sex_male" />


            <RadioButton
                android:id="@+id/btnFeMale"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:button="@null"
                android:checked="false"
                android:drawableRight="@drawable/selector_sex_female" />

        </RadioGroup>

    </RelativeLayout>

    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_25"
        android:enabled="true"
        android:fadeScrollbars="true"
        android:gravity="center"
        android:text="@string/enter_app"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:paddingHorizontal="@dimen/dp_15"
        android:paddingVertical="@dimen/dp_10"
        app:shape="rectangle"
        app:shape_angle="0"
        app:shape_centerX="0.5"
        app:shape_centerY="0.5"
        app:shape_endColor="#FF9050DC"
        app:shape_radius="@dimen/dp_50"
        app:shape_startColor="#FFE976B7"
        />

</LinearLayout>